= v0.8.0 - WIP
* upcoming
  * Ext JS 4.1 support
  * Drop Ruby 1.8.7
  * Configuration rethought
  * Major code clean-up

= v0.7.6 - WIP
* Using Travis CI
* Rails 3.2

= v0.7.5 - 2012-03-05
* API changes
  * The :class_name option must *always* include the full class name now. So, "Basepack::GridPanel" won't work, instead do "Netzke::Basepack::GridPanel"

* enhancements
  * Set default Ext.Direct retry attempts to 0, as more than 0 may only be needed in special cases.

= v0.7.4 - 2011-10-20
* enhancements
  * Less aggressive rescuing at constantizing a string, to let more descriptive exceptions get through.
  * New +delegates_to_dsl+ class method to degelate default config options to class level. See the +ConfigToDslDelegator+ module.

= v0.7.3 - 2011-09-04
* Rails 3.1 compatibility. Really. Hopefully.

= v0.7.2 - 2011-08-31
* Rails 3.1
* bug fix
  * When a component is dynamically loaded in a container, the load mask is now limited to that container
* enhancements
  * New +append+ config option for loadNetzkeComponent, which prevents emptying the container when inserting the newly loaded component; can be used for loading components into layouts different from 'fit'

= v0.7.1 - 2011-08-17
* bug fix
  * Multiple compound Netzke components in the same Rails view were causing JS errors

= v0.7.0 - 2011-08-09
* Ext JS 4 compatibility

* API changes
  * New +ext_uri+ config option (defaults to "extjs") - relative URI to the Ext JS library on the server.
  * New +ext3_compat_uri+ config option (defaults to +nil+) - relative URI to the Ext 3 compatibility layer. When nil, no compatibility layer is loaded.
  * New +current_user_method+ config option (defaults to :current_user) to let Netzke::Core know which method to call on Rails controller to retrieve the current user.
  * New +Netzke::Core.current_user+ method to retrieve the current user.