@@ -3,6 +3,7 @@ $LOAD_PATH << File.dirname(__FILE__)
 require 'netzke/core'
 require 'netzke/base'
 require 'netzke/plugin'
+require 'netzke/action_config'
 
 module Netzke
   autoload :Core, 'netzke/core'
