@@ -1,5 +1,9 @@
 class ExtendedComponentWithActions < ComponentWithActions
   js_property :bbar, [:another_action.action]
 
-  action :some_action, :icon => :tick
+  # Override actions like this
+  def some_action_action(a)
+    super
+    a.icon = :tick
+  end
 end
